# EvoMemory

./: .gitignore  QuickStart.md  README.md  pyproject.toml  requirements.txt
evomemory/: __init__.py  core.py
evomemory/examples/: basic_usage.py
examples/: basic_usage.py
tests/: test_basic.py
